fixed getting the census tracts and cleaning up the state census tracts

--- a/State Analysis.ipynb
+++ b/State Analysis.ipynb
@@ -13,14 +13,92 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Reading in National Census Tract Data...\n"
+     ]
+    }
+   ],
    "source": [
-    "a = analysis.Analysis(\"census\",\"landcover\",\"imp\")"
+    "# initializing/creating the object just reads in the files provided\n",
+    "a = analysis.Analysis(\"../Tract_2010Census_DP1/Tract_2010Census_DP1.shp\",\"../Tract_2010Census_DP1/Tract_2010Census_DP1.shp\",\"../Tract_2010Census_DP1/Tract_2010Census_DP1.shp\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# must be done to set the census tracts and get the census tract data frame for the state\n",
+    "a.setCensusTractDataFrameForState('RI')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['__class__',\n",
+       " '__delattr__',\n",
+       " '__dict__',\n",
+       " '__dir__',\n",
+       " '__doc__',\n",
+       " '__eq__',\n",
+       " '__format__',\n",
+       " '__ge__',\n",
+       " '__getattribute__',\n",
+       " '__gt__',\n",
+       " '__hash__',\n",
+       " '__init__',\n",
+       " '__init_subclass__',\n",
+       " '__le__',\n",
+       " '__lt__',\n",
+       " '__module__',\n",
+       " '__ne__',\n",
+       " '__new__',\n",
+       " '__reduce__',\n",
+       " '__reduce_ex__',\n",
+       " '__repr__',\n",
+       " '__setattr__',\n",
+       " '__sizeof__',\n",
+       " '__str__',\n",
+       " '__subclasshook__',\n",
+       " '__weakref__',\n",
+       " 'calcImperviousSurfaceCoverPercentage',\n",
+       " 'calcNLCDComponentsPercentages',\n",
+       " 'calcPearsonCorrelationForImperviousLandCover',\n",
+       " 'calcPearsonCorrelationForNLCDComponents',\n",
+       " 'calcPopulationDensity',\n",
+       " 'censusTractFile',\n",
+       " 'censusTractNum',\n",
+       " 'getLandCoverTypeWithHighestR',\n",
+       " 'imperviousFile',\n",
+       " 'landCoverFile',\n",
+       " 'nationalCensusTractsGDF',\n",
+       " 'performPearsonAnalysisForState',\n",
+       " 'setCensusTractDataFrameForState',\n",
+       " 'stateCensusTractGDF']"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dir(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -45,200 +123,55 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>GEOID10</th>\n",
-       "      <th>NAMELSAD10</th>\n",
-       "      <th>ALAND10</th>\n",
-       "      <th>AWATER10</th>\n",
-       "      <th>INTPTLAT10</th>\n",
-       "      <th>INTPTLON10</th>\n",
        "      <th>DP0010001</th>\n",
-       "      <th>DP0010002</th>\n",
-       "      <th>DP0010003</th>\n",
-       "      <th>DP0010004</th>\n",
-       "      <th>...</th>\n",
-       "      <th>DP0210001</th>\n",
-       "      <th>DP0210002</th>\n",
-       "      <th>DP0210003</th>\n",
-       "      <th>DP0220001</th>\n",
-       "      <th>DP0220002</th>\n",
-       "      <th>DP0230001</th>\n",
-       "      <th>DP0230002</th>\n",
-       "      <th>Shape_Leng</th>\n",
-       "      <th>Shape_Area</th>\n",
-       "      <th>geometry</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>01005950300</td>\n",
-       "      <td>Census Tract 9503</td>\n",
-       "      <td>352811329.0</td>\n",
-       "      <td>499970.0</td>\n",
-       "      <td>+31.7908933</td>\n",
-       "      <td>-085.5670514</td>\n",
-       "      <td>1638</td>\n",
-       "      <td>98</td>\n",
-       "      <td>87</td>\n",
-       "      <td>88</td>\n",
-       "      <td>...</td>\n",
-       "      <td>673</td>\n",
-       "      <td>544</td>\n",
-       "      <td>129</td>\n",
-       "      <td>1283</td>\n",
-       "      <td>355</td>\n",
-       "      <td>2.36</td>\n",
-       "      <td>2.75</td>\n",
-       "      <td>1.164633</td>\n",
-       "      <td>0.033648</td>\n",
-       "      <td>POLYGON ((-85.52743699999996 31.86650300000008...</td>\n",
+       "      <th>58564</th>\n",
+       "      <td>44001030602</td>\n",
+       "      <td>4046</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>01005950900</td>\n",
-       "      <td>Census Tract 9509</td>\n",
-       "      <td>16201446.0</td>\n",
-       "      <td>8339342.0</td>\n",
-       "      <td>+31.8467221</td>\n",
-       "      <td>-085.1462332</td>\n",
-       "      <td>4583</td>\n",
-       "      <td>456</td>\n",
-       "      <td>387</td>\n",
-       "      <td>363</td>\n",
-       "      <td>...</td>\n",
-       "      <td>1784</td>\n",
-       "      <td>857</td>\n",
-       "      <td>927</td>\n",
-       "      <td>2196</td>\n",
-       "      <td>2387</td>\n",
-       "      <td>2.56</td>\n",
-       "      <td>2.57</td>\n",
-       "      <td>0.280687</td>\n",
-       "      <td>0.002338</td>\n",
-       "      <td>POLYGON ((-85.16412199999996 31.83059499999996...</td>\n",
+       "      <th>58565</th>\n",
+       "      <td>44003020601</td>\n",
+       "      <td>6286</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>01005950800</td>\n",
-       "      <td>Census Tract 9508</td>\n",
-       "      <td>14630162.0</td>\n",
-       "      <td>380622.0</td>\n",
-       "      <td>+31.9206930</td>\n",
-       "      <td>-085.1760317</td>\n",
-       "      <td>2055</td>\n",
-       "      <td>110</td>\n",
-       "      <td>137</td>\n",
-       "      <td>128</td>\n",
-       "      <td>...</td>\n",
-       "      <td>901</td>\n",
-       "      <td>550</td>\n",
-       "      <td>351</td>\n",
-       "      <td>1257</td>\n",
-       "      <td>798</td>\n",
-       "      <td>2.29</td>\n",
-       "      <td>2.27</td>\n",
-       "      <td>0.173100</td>\n",
-       "      <td>0.001431</td>\n",
-       "      <td>POLYGON ((-85.14871799999997 31.909335, -85.14...</td>\n",
+       "      <th>58566</th>\n",
+       "      <td>44003020604</td>\n",
+       "      <td>5270</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>01005950700</td>\n",
-       "      <td>Census Tract 9507</td>\n",
-       "      <td>127200997.0</td>\n",
-       "      <td>112809.0</td>\n",
-       "      <td>+31.9440855</td>\n",
-       "      <td>-085.2620842</td>\n",
-       "      <td>1727</td>\n",
-       "      <td>101</td>\n",
-       "      <td>112</td>\n",
-       "      <td>106</td>\n",
-       "      <td>...</td>\n",
-       "      <td>646</td>\n",
-       "      <td>372</td>\n",
-       "      <td>274</td>\n",
-       "      <td>915</td>\n",
-       "      <td>663</td>\n",
-       "      <td>2.46</td>\n",
-       "      <td>2.42</td>\n",
-       "      <td>0.622975</td>\n",
-       "      <td>0.012143</td>\n",
-       "      <td>POLYGON ((-85.14578399999999 31.89149100000009...</td>\n",
+       "      <th>58567</th>\n",
+       "      <td>44003020602</td>\n",
+       "      <td>3527</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>01005950600</td>\n",
-       "      <td>Census Tract 9506</td>\n",
-       "      <td>101697268.0</td>\n",
-       "      <td>1101261.0</td>\n",
-       "      <td>+31.8783526</td>\n",
-       "      <td>-085.2729215</td>\n",
-       "      <td>2099</td>\n",
-       "      <td>137</td>\n",
-       "      <td>160</td>\n",
-       "      <td>166</td>\n",
-       "      <td>...</td>\n",
-       "      <td>828</td>\n",
-       "      <td>510</td>\n",
-       "      <td>318</td>\n",
-       "      <td>1295</td>\n",
-       "      <td>804</td>\n",
-       "      <td>2.54</td>\n",
-       "      <td>2.53</td>\n",
-       "      <td>0.556037</td>\n",
-       "      <td>0.009798</td>\n",
-       "      <td>POLYGON ((-85.14572299999998 31.89010600000006...</td>\n",
+       "      <th>58568</th>\n",
+       "      <td>44003020603</td>\n",
+       "      <td>6527</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 195 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "       GEOID10         NAMELSAD10      ALAND10   AWATER10   INTPTLAT10  \\\n",
-       "0  01005950300  Census Tract 9503  352811329.0   499970.0  +31.7908933   \n",
-       "1  01005950900  Census Tract 9509   16201446.0  8339342.0  +31.8467221   \n",
-       "2  01005950800  Census Tract 9508   14630162.0   380622.0  +31.9206930   \n",
-       "3  01005950700  Census Tract 9507  127200997.0   112809.0  +31.9440855   \n",
-       "4  01005950600  Census Tract 9506  101697268.0  1101261.0  +31.8783526   \n",
-       "\n",
-       "     INTPTLON10  DP0010001  DP0010002  DP0010003  DP0010004  \\\n",
-       "0  -085.5670514       1638         98         87         88   \n",
-       "1  -085.1462332       4583        456        387        363   \n",
-       "2  -085.1760317       2055        110        137        128   \n",
-       "3  -085.2620842       1727        101        112        106   \n",
-       "4  -085.2729215       2099        137        160        166   \n",
-       "\n",
-       "                         ...                          DP0210001  DP0210002  \\\n",
-       "0                        ...                                673        544   \n",
-       "1                        ...                               1784        857   \n",
-       "2                        ...                                901        550   \n",
-       "3                        ...                                646        372   \n",
-       "4                        ...                                828        510   \n",
-       "\n",
-       "   DP0210003  DP0220001  DP0220002  DP0230001  DP0230002  Shape_Leng  \\\n",
-       "0        129       1283        355       2.36       2.75    1.164633   \n",
-       "1        927       2196       2387       2.56       2.57    0.280687   \n",
-       "2        351       1257        798       2.29       2.27    0.173100   \n",
-       "3        274        915        663       2.46       2.42    0.622975   \n",
-       "4        318       1295        804       2.54       2.53    0.556037   \n",
-       "\n",
-       "   Shape_Area                                           geometry  \n",
-       "0    0.033648  POLYGON ((-85.52743699999996 31.86650300000008...  \n",
-       "1    0.002338  POLYGON ((-85.16412199999996 31.83059499999996...  \n",
-       "2    0.001431  POLYGON ((-85.14871799999997 31.909335, -85.14...  \n",
-       "3    0.012143  POLYGON ((-85.14578399999999 31.89149100000009...  \n",
-       "4    0.009798  POLYGON ((-85.14572299999998 31.89010600000006...  \n",
-       "\n",
-       "[5 rows x 195 columns]"
+       "           GEOID10  DP0010001\n",
+       "58564  44001030602       4046\n",
+       "58565  44003020601       6286\n",
+       "58566  44003020604       5270\n",
+       "58567  44003020602       3527\n",
+       "58568  44003020603       6527"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "a.censusTractsGDF.head()"
+    "a.stateCensusTractGDF.head()"
    ]
   },
   {
