--- a/State Analysis.ipynb
+++ b/State Analysis.ipynb
@@ -18,7 +18,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Reading in National Census Tract Data...\n"
+      "Reading in National Census Tract Data...\n",
+      "Calculating Imprevious Surface Cover Percentage...\n",
+      "Calculating Land Cover Percentages...\n",
+      "Calculating Population Density...\n"
      ]
     }
    ],
@@ -40,65 +43,6 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['__class__',\n",
-       " '__delattr__',\n",
-       " '__dict__',\n",
-       " '__dir__',\n",
-       " '__doc__',\n",
-       " '__eq__',\n",
-       " '__format__',\n",
-       " '__ge__',\n",
-       " '__getattribute__',\n",
-       " '__gt__',\n",
-       " '__hash__',\n",
-       " '__init__',\n",
-       " '__init_subclass__',\n",
-       " '__le__',\n",
-       " '__lt__',\n",
-       " '__module__',\n",
-       " '__ne__',\n",
-       " '__new__',\n",
-       " '__reduce__',\n",
-       " '__reduce_ex__',\n",
-       " '__repr__',\n",
-       " '__setattr__',\n",
-       " '__sizeof__',\n",
-       " '__str__',\n",
-       " '__subclasshook__',\n",
-       " '__weakref__',\n",
-       " 'calcImperviousSurfaceCoverPercentage',\n",
-       " 'calcNLCDComponentsPercentages',\n",
-       " 'calcPearsonCorrelationForImperviousLandCover',\n",
-       " 'calcPearsonCorrelationForNLCDComponents',\n",
-       " 'calcPopulationDensity',\n",
-       " 'censusTractFile',\n",
-       " 'censusTractNum',\n",
-       " 'getLandCoverTypeWithHighestR',\n",
-       " 'imperviousFile',\n",
-       " 'landCoverFile',\n",
-       " 'nationalCensusTractsGDF',\n",
-       " 'performPearsonAnalysisForState',\n",
-       " 'setCensusTractDataFrameForState',\n",
-       " 'stateCensusTractGDF']"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "dir(a)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -165,7 +109,7 @@
        "58568  44003020603       6527"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
