updated analysis and fixed data frames

--- a/State Analysis.ipynb
+++ b/State Analysis.ipynb
@@ -11,111 +11,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Reading in National Census Tract Data...\n",
-      "Calculating Imprevious Surface Cover Percentage...\n",
-      "Calculating Land Cover Percentages...\n",
-      "Calculating Population Density...\n"
+      "Reading in National Census Tract Data...\n"
      ]
     }
    ],
    "source": [
+    "#test cases\n",
     "# initializing/creating the object just reads in the files provided\n",
-    "a = analysis.Analysis(\"../Tract_2010Census_DP1/Tract_2010Census_DP1.shp\",\"../Tract_2010Census_DP1/Tract_2010Census_DP1.shp\",\"../Tract_2010Census_DP1/Tract_2010Census_DP1.shp\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# must be done to set the census tracts and get the census tract data frame for the state\n",
-    "a.setCensusTractDataFrameForState('RI')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>GEOID10</th>\n",
-       "      <th>DP0010001</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>58564</th>\n",
-       "      <td>44001030602</td>\n",
-       "      <td>4046</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>58565</th>\n",
-       "      <td>44003020601</td>\n",
-       "      <td>6286</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>58566</th>\n",
-       "      <td>44003020604</td>\n",
-       "      <td>5270</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>58567</th>\n",
-       "      <td>44003020602</td>\n",
-       "      <td>3527</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>58568</th>\n",
-       "      <td>44003020603</td>\n",
-       "      <td>6527</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "           GEOID10  DP0010001\n",
-       "58564  44001030602       4046\n",
-       "58565  44003020601       6286\n",
-       "58566  44003020604       5270\n",
-       "58567  44003020602       3527\n",
-       "58568  44003020603       6527"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "a.stateCensusTractGDF.head()"
+    "# census = r'./ri_census_tracts/ri_census_tracts.shp'\n",
+    "census = r'../Tract_2010Census_DP1/Tract_2010Census_DP1.shp'\n",
+    "# imp = r'./ri_imp6.tif'\n",
+    "imp = r'../nlcd_2011_impervious_2011_edition_2014_10_10_gtif.tif'\n",
+    "# nlcd = r'./ri_nlcd4.tif'\n",
+    "nlcd = r'../nlcd_2011_landcover_2011_edition_2014_10_10_gtif.tif'\n",
+    "a = analysis.Analysis(census, nlcd, imp)\n",
+    "a.setCensusTractDataFrameForState(\"RI\")\n",
+    "# a.calcImperviousSurfaceCoverPercentage()\n",
+    "\n",
+    "# a.calcNLCDComponentsPercentages()\n",
+    "a.performPearsonAnalysis()\n",
+    "a.stateCensusTractGDF"
    ]
   },
   {
