fixed how population density was being calculated

--- a/State Analysis.ipynb
+++ b/State Analysis.ipynb
@@ -837,31 +837,13 @@
     }
    ],
    "source": [
-    "for s in ['RI','NY','FL','WI','CA','NE']:\n",
+    "# states = ['RI','NY','FL','WI','CA','NE']\n",
+    "states = ['NE']\n",
+    "for s in states:\n",
     "    a.setCensusTractDataFrameForState(s) # required\n",
     "    a.performPearsonAnalysis()\n",
     "    a.performMultLinRegAnalysis()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [],
-   "source": [
-    "# a.performPearsonAnalysis()\n",
-    "# a.performMultLinRegAnalysis()\n",
-    "# a.stateCensusTractGDF"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
